@@ -4,6 +4,7 @@
 - Always center the GUI when it appears and make it unmoveable.
 - When the GUI is in focus and visible, any click out of focus should hide the application.
 - Hide the window controls on the GUI.
+- Have the daemon show its active at the top-right of the MacOS.
 
 2025-Dec-21:
 - Initialize project
@@ -17,6 +18,6 @@
 
 TODO:
 - Restrict triggering of global keybind to only browser sessions.
-- Have the daemon show its active at the top-right of the MacOS.
 - Use case 1: creation of new task
   - Sketch out workflow of creating a new task and assigning tabs to each task.
+- daemon: Combine the sanitizer header into the config.h.
